unpackaged/main/default/objects/Subdivision__c/Subdivision__c.object-meta.xml
<CustomObject>
    <description>NEWSTAR Sales Subdivision</description>
    <label>Subdivision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subdivisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>