unpackaged/main/default/objects/Subdivision__c/fields/Marketing_Community__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Community__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketing Community</label>
        <referenceTo>Marketing_Community__c</referenceTo>
        <relationshipLabel>Subdivisions</relationshipLabel>
        <relationshipName>Subdivisions</relationshipName>
        <type>Lookup</type>
    </CustomField>