unpackaged/main/default/objects/Subdivision__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Subdivisions</relationshipLabel>
        <relationshipName>Subdivisions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>