unpackaged/main/default/objects/Subdivision__c/fields/Sitemap_URL__c.field-meta.xml
<CustomField>
        <fullName>Sitemap_URL__c</fullName>
        <label>Sitemap URL</label>
        <type>TextArea</type>
    </CustomField>