unpackaged/main/default/objects/Subdivision__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Office__c</columns>
        <columns>Marketing_Community__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>